Multiple modules: update wording from "Output this module to $\LaTeXhimBHsformatted PDF file" to "Output this notebook to $\LaTeXhimBHsformatted PDF file".

--- a/Tutorial-BSSN_quantities.ipynb
+++ b/Tutorial-BSSN_quantities.ipynb
@@ -67,8 +67,7 @@
     "    1. [Step 9.a](#phi_ito_cf): $\\phi$ in terms of the chosen (possibly non-standard) conformal factor variable `cf` (e.g., `cf`$=W=e^{-4\\phi}$)\n",
     "    1. [Step 9.b](#phi_covariant_derivs): Partial and covariant derivatives of $\\phi$\n",
     "1. [Step 10](#code_validation): Code Validation against `BSSN.BSSN_quantities` NRPy+ module\n",
-    "1. [Step 11](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF\n",
-    "\n"
+    "1. [Step 11](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF"
    ]
   },
   {
@@ -1303,7 +1302,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 11: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 11: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
