--- a/Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb
+++ b/Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb
@@ -55,7 +55,7 @@
     "    1. [Step 3.a](#einstein_c): Constructing the Einstein Toolkit C-code calling functions that include the C code kernels\n",
     "    1. [Step 3.b](#einstein_ccl): CCL files - Define how this module interacts and interfaces with the larger Einstein Toolkit infrastructure\n",
     "    1. [Step 3.c](#einstein_list): Add the C code to the Einstein Toolkit compilation list\n",
-    "1. [Step 4](#latex_pdf_output): **Output this module to $\\LaTeX$-formatted PDF**"
+    "1. [Step 4](#latex_pdf_output): **Output this notebook to $\\LaTeX$-formatted PDF**"
    ]
   },
   {
@@ -960,7 +960,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 4: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 4: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
