--- a/Tutorial-GiRaFFEfood_HO_Exact_Wald.ipynb
+++ b/Tutorial-GiRaFFEfood_HO_Exact_Wald.ipynb
@@ -58,7 +58,7 @@
     "    1. [Step 4.a](#code_validation1): Code Validation against `GiRaFFEfood_HO.GiRaFFEfood_HO` NRPy+ Module\n",
     "1. [Step 5](#si): Build the expression for $\\tilde{S}_i$\n",
     "    1. [Step 5.a](#code_validation2): Code Validation against `GiRaFFEfood_HO.GiRaFFEfood_HO` NRPy+ Module\n",
-    "1. [Step 6](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file"
+    "1. [Step 6](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
    ]
   },
   {
@@ -408,7 +408,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 6: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 6: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
