--- a/Tutorial-RK_Butcher_Table_Dictionary.ipynb
+++ b/Tutorial-RK_Butcher_Table_Dictionary.ipynb
@@ -71,7 +71,7 @@
     "        1. [Step 2.a.xiv](#l6): RK6 Luther Method\n",
     "        1. [Step 2.a.xv](#dp8): RK8 Dormand-Prince Method\n",
     "1. [Step 3](#code_validation): Code Validation against `MoLtimestepping.RK_Butcher_Table_Dictionary` NRPy+ module\n",
-    "1. [Step 4](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF"
+    "1. [Step 4](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF"
    ]
   },
   {
@@ -880,7 +880,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 4: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 4: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
