--- a/Tutorial-TOV-Piecewise_Polytrope_EOSs.ipynb
+++ b/Tutorial-TOV-Piecewise_Polytrope_EOSs.ipynb
@@ -65,7 +65,7 @@
     "        1. [Step 11.c.ii](#code_validation__joshua_faber_tov_solver__restoring_units): Restoring units to the solution of NRPy+'s TOV solver\n",
     "        1. [Step 11.c.iii](#code_validation__joshua_faber_tov_solver__validation): Validation of NRPy+'s results\n",
     "    1. [Step 11.d](#code_validation__mass_vs_radius): *Mass vs. Radius relations*\n",
-    "1. [Step 12](#latex_pdf_output): **Output this module to $\\LaTeX$-formatted PDF**"
+    "1. [Step 12](#latex_pdf_output): **Output this notebook to $\\LaTeX$-formatted PDF**"
    ]
   },
   {
@@ -2392,7 +2392,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 12: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 12: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
