--- a/Tutorial-ADM_Initial_Data-Brill-Lindquist.ipynb
+++ b/Tutorial-ADM_Initial_Data-Brill-Lindquist.ipynb
@@ -39,7 +39,7 @@
     "1. [Step 1](#initializenrpy): Initialize core Python/NRPy+ modules\n",
     "1. [Step 2](#initialdata): Setting up Brill-Lindquist initial data\n",
     "1. [Step 3](#code_validation): Code Validation against BSSN/BrillLindquist NRPy+ module\n",
-    "1. [Step 4](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF"
+    "1. [Step 4](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF"
    ]
   },
   {
@@ -232,7 +232,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 4: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 4: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
