--- a/Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb
+++ b/Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb
@@ -56,7 +56,7 @@
     "    1. [Step 6.a](#driver): Output the driver function for the above C function\n",
     "1. [Step 7](#lambda): Compute $\\bar{\\Lambda}^i$ from finite-difference derivatives of rescaled metric quantities\n",
     "1. [Step 8](#code_validation): Code Validation against `BSSN.ADM_Numerical_Spherical_or_Cartesian_to_BSSNCurvilinear` NRPy+ module\n",
-    "1. [Step 9](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF"
+    "1. [Step 9](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF"
    ]
   },
   {
@@ -568,7 +568,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 9: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 9: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "Once the following code finishes running, the generated PDF may be found at the following location within the directory you have the NRPy+ tutorial saved:\n",
