--- a/Tutorial-ADM_Initial_Data-ShiftedKerrSchild.ipynb
+++ b/Tutorial-ADM_Initial_Data-ShiftedKerrSchild.ipynb
@@ -50,7 +50,7 @@
     "    1. [Step 3.a](#abc): Define useful quantities $A$, $B$, $C$\n",
     "    1. [Step 3.b](#nonzero_k): Define and construct nonzero components of $K_{ij}$\n",
     "1. [Step 4](#code_validation): Code Validation against `BSSN.ShiftedKerrSchild` NRPy+ module\n",
-    "1. [Step 5](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF"
+    "1. [Step 5](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF"
    ]
   },
   {
@@ -459,7 +459,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 5: Output this module to $\\LaTeX$-formatted PDF \\[Back to [top](#toc)\\]\n",
+    "# Step 5: Output this notebook to $\\LaTeX$-formatted PDF \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
