--- a/Tutorial-ADM_Initial_Data-StaticTrumpet.ipynb
+++ b/Tutorial-ADM_Initial_Data-StaticTrumpet.ipynb
@@ -48,7 +48,7 @@
     "1. [Step 3](#extrinsic_curvature): Define and construct nonzero components of the extrinsic curvature $K_{ij}$, at the radius $R_0 = M$\n",
     "1. [Step 4](#lapse_shift): Construct Lapse function $\\alpha$ and components of shift vector $\\beta$\n",
     "1. [Step 5](#code_validation): Code Validation against `BSSN.StaticTrumpet` NRPy+ module\n",
-    "1. [Step 6](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF"
+    "1. [Step 6](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF"
    ]
   },
   {
@@ -338,7 +338,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 6: Output this module to $\\LaTeX$-formatted PDF \\[Back to [top](#toc)\\]\n",
+    "# Step 6: Output this notebook to $\\LaTeX$-formatted PDF \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
