--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_multi_order.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_multi_order.ipynb
@@ -65,7 +65,7 @@
     "    1. [Step 3.c](#paramccl): `param.ccl`\n",
     "    1. [Step 3.d](#scheduleccl): `schedule.ccl`\n",
     "1. [Step 4](#readingoutputfile): Python Script for Reading the Output File\n",
-    "1. [Step 5](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF"
+    "1. [Step 5](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF"
    ]
   },
   {
@@ -1532,7 +1532,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 5: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 5: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
