--- a/Tutorial-Finite_Difference_Derivatives.ipynb
+++ b/Tutorial-Finite_Difference_Derivatives.ipynb
@@ -37,7 +37,7 @@
     "    1. [Step 1.a](#fdcoeffs_func): The `compute_fdcoeffs_fdstencl()` function\n",
     "        1. [Step 1.a.i](#exercise): Exercise: Using `compute_fdcoeffs_fdstencl()`\n",
     "    1. [Step 1.b](#fdoutputc): The  `FD_outputC()` function\n",
-    "1. [Step 2](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF    "
+    "1. [Step 2](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF    "
    ]
   },
   {
@@ -288,7 +288,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 2: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 2: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
