--- a/Tutorial-GRHD_Equations-Cartesian-c-code.ipynb
+++ b/Tutorial-GRHD_Equations-Cartesian-c-code.ipynb
@@ -151,7 +151,7 @@
     "1. [Step 5](#rotation): Rotation\n",
     "1. [Step 6](#solver): Conservative to Primitive Solver\n",
     "1. [Step 7](#lorentz): Lorentz Boosts\n",
-    "1. [Step 8](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file"
+    "1. [Step 8](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
    ]
   },
   {
@@ -765,7 +765,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 8: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 8: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
