--- a/Tutorial-GiRaFFE_HO_Ccode_library-PPM.ipynb
+++ b/Tutorial-GiRaFFE_HO_Ccode_library-PPM.ipynb
@@ -54,7 +54,7 @@
     "    1. [Step 1.e](#shift): Shift indices\n",
     "1. [Step 2](#slope_limit): The slope limiter\n",
     "1. [Step 3](#monotonize_def): The monotonization algorithm\n",
-    "1. [Step 4](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file"
+    "1. [Step 4](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
    ]
   },
   {
@@ -550,7 +550,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 4: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 4: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
