--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -108,7 +108,7 @@
     "    1. [Step 5.a](#aux): Construct some useful auxiliary gridfunctions for the other evolution equations\n",
     "    1. [Step 5.b](#complete_construct_ai): Complete the construction of the evolution equations for $A_i$ and $[\\sqrt{\\gamma}\\Phi]$\n",
     "1. [Step 6](#code_validation): Code Validation against `GiRaFFE_HO.GiRaFFE_Higher_Order` NRPy+ Module\n",
-    "1. [Step 7](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file"
+    "1. [Step 7](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
    ]
   },
   {
@@ -1246,7 +1246,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 7: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 7: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
