--- a/Tutorial-GiRaFFEfood_HO_Aligned_Rotator.ipynb
+++ b/Tutorial-GiRaFFEfood_HO_Aligned_Rotator.ipynb
@@ -49,7 +49,7 @@
     "1. [Step 3](#jacobian): Use the Jacobian matrix to transform the vectors to Cartesian coordinates\n",
     "1. [Step 4](#vi): Calculate $v^i$\n",
     "1. [Step 5](#code_validation): Code Validation against `GiRaFFEfood_HO.GiRaFFEfood_HO_Aligned_Rotator` NRPy+ Module\n",
-    "1. [Step 6](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file"
+    "1. [Step 6](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
    ]
   },
   {
@@ -279,7 +279,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 6: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 6: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
