--- a/Tutorial-Method_of_Lines-C_Code_Generation.ipynb
+++ b/Tutorial-Method_of_Lines-C_Code_Generation.ipynb
@@ -70,7 +70,7 @@
     "    1. [Step 3.b](#rkmol): Implementing the Runge Kutta Scheme for Method of Lines Timestepping,  `MoLtimestepping/RK_MoL.h`\n",
     "    1. [Step 3.c](#free): Freeing Allocated Memory, `MoLtimestepping/RK_Free_Memory.h`\n",
     "1. [Step 4](#code_validation): Code Validation against `MoLtimestepping.RK_Butcher_Table_Generating_C_Code` NRPy+ module \n",
-    "1. [Step 5](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF"
+    "1. [Step 5](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF"
    ]
   },
   {
@@ -617,7 +617,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 5: Output this module to $\\LaTeX$-formatted PDF \\[Back to [top](#toc)\\]\n",
+    "# Step 5: Output this notebook to $\\LaTeX$-formatted PDF \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
