--- a/Tutorial-Start_to_Finish-Curvilinear_BCs-new.ipynb
+++ b/Tutorial-Start_to_Finish-Curvilinear_BCs-new.ipynb
@@ -169,7 +169,7 @@
     "    1. [Step 8.c](#validate): Set up test data for Curvilinear Boundary Conditions code validation\n",
     "    1. [Step 8.d](#mainc): `CurviBC_Playground.c` : The Main C Code\n",
     "1. [Step 9](#senr_compare): Validation: Compare with original SENR results\n",
-    "1. [Step 10](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file"
+    "1. [Step 10](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
    ]
   },
   {
@@ -1695,7 +1695,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 10: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 10: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
