--- a/Tutorial-Start_to_Finish-Finite_Difference_Playground.ipynb
+++ b/Tutorial-Start_to_Finish-Finite_Difference_Playground.ipynb
@@ -36,7 +36,7 @@
     "1. [Step 1](#outputc): Output the C file `finite_diff_tutorial-second_deriv.h`\n",
     "1. [Step 2](#fdplayground): Finite-Difference Playground: A Complete C Code for Analyzing Finite-Difference Expressions Output by NRPy+\n",
     "1. [Step 3](#exercise): Exercises to students\n",
-    "1. [Step 4](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file"
+    "1. [Step 4](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
    ]
   },
   {
@@ -348,7 +348,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 4: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 4: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
