--- a/Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.ipynb
+++ b/Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.ipynb
@@ -61,7 +61,7 @@
     "1. [Step 5](#a_and_b): Output A-to-B expressions\n",
     "1. [Step 6](#apply_bcs): Apply singular, curvilinear coordinate boundary conditions\n",
     "1. [Step 7](#mainc): $\\rm{GiRaFFE\\_standalone.c}$: The Main C Code\n",
-    "1. [Step 8](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file"
+    "1. [Step 8](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
    ]
   },
   {
@@ -1544,7 +1544,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 8: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 8: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
