--- a/Tutorial-Start_to_Finish-ScalarWave-SIMD.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWave-SIMD.ipynb
@@ -56,7 +56,7 @@
     "1. [Step 1](#generate):  Generating the NRPy+ Components to the Scalar Wave Equation in Three Spatial Dimensions, Fourth-Order Finite Differencing, with Monochromatic Plane Wave Initial Data\n",
     "1. [Step 2](#mainc): `ScalarWave_Playground.c`: The Main C Code\n",
     "1. [Step 3](#convergence): Code validation: Verify that relative error in numerical solution converges to zero at the expected order\n",
-    "1. [Step 4](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file"
+    "1. [Step 4](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
    ]
   },
   {
@@ -613,7 +613,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 4: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 4: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
