--- a/Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.ipynb
@@ -60,7 +60,7 @@
     "1. [Step 2](#mainc): `ScalarWaveCurvilinear_Playground-SIMD.c`: The Main C Code\n",
     "1. [Step 3](#compileexec): Compile generated C codes & solve the scalar wave equation\n",
     "1. [Step 4](#convergence): Code validation: Plot the numerical error, and confirm that it converges to zero at expected rate with increasing numerical resolution (sampling)\n",
-    "1. [Step 5](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file"
+    "1. [Step 5](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
    ]
   },
   {
@@ -865,7 +865,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 5: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 5: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
