IllinoisGRMHD Jupyter notebooks: update wording from "Output this module to $\LaTeXhimBHsformatted PDF file" to "Output this notebook to $\LaTeXhimBHsformatted PDF file".

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.ipynb
@@ -58,7 +58,7 @@
     "    1. [Step 3.f](#tdnmunu): *The stress-energy tensor, $T_{\\mu\\nu}$*\n",
     "    1. [Step 3.g](#recompute_conservs): *Recomputing the conservative variables*\n",
     "1. [Step 4](#code_validation): **Code validation**\n",
-    "1. [Step 5](#latex_pdf_output): **Output this module to $\\LaTeX$-formatted PDF file**"
+    "1. [Step 5](#latex_pdf_output): **Output this notebook to $\\LaTeX$-formatted PDF file**"
    ]
   },
   {
@@ -1223,7 +1223,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 5: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 5: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
