--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__Configuration_files.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__Configuration_files.ipynb
@@ -54,7 +54,7 @@
     "    1. [Step 8.d](#code_validation__param__ccl): *`param.ccl`*\n",
     "    1. [Step 8.e](#code_validation__schedule__ccl): *`schedule.ccl`*\n",
     "    1. [Step 8.f](#code_validation__code_validation__txt): *`code_validation.txt`*\n",
-    "1. [Step 9](#latex_pdf_output): **Output this module to $\\LaTeX$-formatted PDF file**"
+    "1. [Step 9](#latex_pdf_output): **Output this notebook to $\\LaTeX$-formatted PDF file**"
    ]
   },
   {
@@ -1289,7 +1289,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 9: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 9: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
