--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.ipynb
@@ -47,7 +47,7 @@
     "    1. [Step 2.c](#enforce_det_gammabar_eq_1): *Enforcing the constraint $\\bar\\gamma = 1$*\n",
     "    1. [Step 2.d](#update_gfs): *Updating the gridfunctions*\n",
     "1. [Step 3](#code_validation): **Code validation**\n",
-    "1. [Step 4](#latex_pdf_output): **Output this module to $\\LaTeX$-formatted PDF file**"
+    "1. [Step 4](#latex_pdf_output): **Output this notebook to $\\LaTeX$-formatted PDF file**"
    ]
   },
   {
@@ -487,7 +487,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 4: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 4: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
