--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__harm_u2p_util.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__harm_u2p_util.ipynb
@@ -49,7 +49,7 @@
     "    1. [Step 3.a](#pressure_rho0_u): *The `pressure_rho0_u()` function*\n",
     "    1. [Step 3.b](#pressure_rho0_w): *The `pressure_rho0_w()` function*\n",
     "1. [Step n-1](#code_validation): **Code validation**\n",
-    "1. [Step n](#latex_pdf_output): **Output this module to $\\LaTeX$-formatted PDF file**"
+    "1. [Step n](#latex_pdf_output): **Output this notebook to $\\LaTeX$-formatted PDF file**"
    ]
   },
   {
@@ -901,7 +901,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 5: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 5: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
