--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__postpostinitial__set_symmetries__copy_timelevels.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__postpostinitial__set_symmetries__copy_timelevels.ipynb
@@ -43,7 +43,7 @@
     "1. [Step 1](#introduction): **Introduction**\n",
     "1. [Step 2](#postpostinitial__set_symmetries__copy_timelevels__c): **`postpostinitial__set_symmetries__copy_timelevels.C`**\n",
     "1. [Step n-1](#code_validation): **Code validation**\n",
-    "1. [Step n](#latex_pdf_output): **Output this module to $\\LaTeX$-formatted PDF file**"
+    "1. [Step n](#latex_pdf_output): **Output this notebook to $\\LaTeX$-formatted PDF file**"
    ]
   },
   {
@@ -332,7 +332,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step n: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step n: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
