--- a/IllinoisGRMHD/ID_converter_ILGRMHD/doc/Tutorial-ID_converter_ILGRMHD.ipynb
+++ b/IllinoisGRMHD/ID_converter_ILGRMHD/doc/Tutorial-ID_converter_ILGRMHD.ipynb
@@ -47,7 +47,7 @@
     "1. [Step 5](#convert_to_hydrobase__schedule): **`schedule.ccl`**\n",
     "1. [Step 6](#convert_to_hydrobase__make): **`make.code.defn`**\n",
     "1. [Step n-1](#code_validation): **Code validation**\n",
-    "1. [Step n](#latex_pdf_output): **Output this module to $\\LaTeX$-formatted PDF file**"
+    "1. [Step n](#latex_pdf_output): **Output this notebook to $\\LaTeX$-formatted PDF file**"
    ]
   },
   {
@@ -736,7 +736,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step n: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step n: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
