--- a/Tutorial-Coutput__Parameter_Interface.ipynb
+++ b/Tutorial-Coutput__Parameter_Interface.ipynb
@@ -50,7 +50,7 @@
     "1. [Step 4](#param): Oh, the features you'll see! Parameters in NRPy+\n",
     "    1. [Step 4.a](#param_func): `NRPy_param_funcs`: The NRPy+ Parameter Interface\n",
     "1. [Step 5](#simd): Taking Advantage of SIMD (Single Instruction, Multiple Data) in NRPy+-Generated C Code\n",
-    "1. [Step 6](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF"
+    "1. [Step 6](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
    ]
   },
   {
