--- a/Tutorial-ETK_thorn-GiRaFFE_Higher_Order_v2.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFE_Higher_Order_v2.ipynb
@@ -69,7 +69,7 @@
     "        1. [Step2.e.ii](#param): `param.ccl`\n",
     "        1. [Step2.e.iiii](#schedule): `schedule.ccl`\n",
     "    1. [Step 2.f](#einstein_list): Add the C code to the Einstein Toolkit compilation list\n",
-    "1. [Step 3](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF"
+    "1. [Step 3](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
    ]
   },
   {
