--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
@@ -64,7 +64,7 @@
     "    1. [Step 3.c](#paramccl): `param.ccl`\n",
     "    1. [Step 3.d](#scheduleccl): `schedule.ccl`\n",
     "1. [Step 4](#readingoutputfile): Python Script for Reading the Output File\n",
-    "1. [Step 5](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF"
+    "1. [Step 5](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
    ]
   },
   {
