--- a/Tutorial-RK_Butcher_Table_Dictionary.ipynb
+++ b/Tutorial-RK_Butcher_Table_Dictionary.ipynb
@@ -71,7 +71,7 @@
     "        1. [Step 2.a.xiv](#l6): RK6 Luther Method\n",
     "        1. [Step 2.a.xv](#dp8): RK8 Dormand-Prince Method\n",
     "1. [Step 3](#code_validation): Code Validation against `MoLtimestepping.RK_Butcher_Table_Dictionary` NRPy+ module\n",
-    "1. [Step 4](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF"
+    "1. [Step 4](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
    ]
   },
   {
