--- a/Tutorial-SEOBNR_Documentation.ipynb
+++ b/Tutorial-SEOBNR_Documentation.ipynb
@@ -173,7 +173,7 @@
     "    1. [Step 17.c](#eta): $\\eta$  \n",
     "    1. [Step 17.d](#mu): $\\mu$  \n",
     "    1. [Step 17.e](#m): $M$\n",
-    "1. [Step 18](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF"
+    "1. [Step 18](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
    ]
   },
   {
