--- a/Tutorial-SEOBNR_Initial_Conditions.ipynb
+++ b/Tutorial-SEOBNR_Initial_Conditions.ipynb
@@ -151,7 +151,7 @@
     "  * [Step 4.e:](#sigmastar) $\\boldsymbol{\\sigma}^{*}$\n",
     "  * [Step 4.f:](#hreal) $H_{\\rm real}$\n",
     "1. [Step 5:](#step5) Invert the rotation of Step 3\n",
-    "1. [Output](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF"
+    "1. [Output](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
    ]
   },
   {
