--- a/Tutorial-ETK_thorn-GiRaFFEfood_HO_Exact_Wald.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFEfood_HO_Exact_Wald.ipynb
@@ -64,7 +64,7 @@
     "        1. [Step2.c.iiii](#schedule): `schedule.ccl`\n",
     "    1. [Step 2.d](#einstein_list): Add the C code to the Einstein Toolkit compilation list\n",
     "1. [Step 3](#data_agreement): Current Initial Data Agreement\n",
-    "1. [Step 4](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF"
+    "1. [Step 4](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
    ]
   },
   {
