--- a/Tutorial-RK_Butcher_Table_Validation.ipynb
+++ b/Tutorial-RK_Butcher_Table_Validation.ipynb
@@ -147,7 +147,7 @@
     "    1. [Step 2.a](#rhs): Defining the right-hand side of the ODE\n",
     "    1. [Step 2.b](#validfunc): Defining a Validation Function\n",
     "    1. [Step 2.c](#rkvalid): Validating RK Methods against ODEs\n",
-    "1. [Step 3](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF"
+    "1. [Step 3](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
    ]
   },
   {
