Tutorial-GRHD_Equations-Cartesian-new: Add function names to ToC

--- a/Tutorial-GRHD_Equations-Cartesian-new.ipynb
+++ b/Tutorial-GRHD_Equations-Cartesian-new.ipynb
@@ -17,11 +17,11 @@
     "\n",
     "## Author: Zach Etienne\n",
     "\n",
-    "## This module documents and constructs a number of quantities useful for building symbolic (SymPy) expressions for the equations of general relativistic hydrodynamics (GRHD).\n",
+    "## This notebook documents and constructs a number of quantities useful for building symbolic (SymPy) expressions for the equations of general relativistic hydrodynamics (GRHD), using the same (Valencia) formalism as `IllinoisGRMHD`\n",
     "\n",
-    "**Module Status:** <font color='orange'><b> Self-Validated </b></font>\n",
+    "**Notebook Status:** <font color='orange'><b> Self-Validated </b></font>\n",
     "\n",
-    "**Validation Notes:** This tutorial module has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). **Additional validation tests may have been performed, but are as yet, undocumented. (TODO)**\n",
+    "**Validation Notes:** This tutorial notebook has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). **Additional validation tests may have been performed, but are as yet, undocumented. (TODO)**\n",
     "\n",
     "## Introduction\n",
     "\n",
@@ -110,21 +110,21 @@
     "# Table of Contents\n",
     "$$\\label{toc}$$\n",
     "\n",
-    "Each family of quantities is constructed within a given function (**boldfaced** below). This module is organized as follows\n",
+    "Each family of quantities is constructed within a given function (**boldfaced** below). This notebook is organized as follows\n",
     "\n",
     "\n",
     "1. [Step 1](#importmodules): Import needed NRPy+ & Python modules\n",
-    "1. [Step 2](#stressenergy): Define the stress-energy tensor $T^{\\mu\\nu}$ and $T^\\mu{}_\\nu$\n",
-    "1. [Step 3](#primtoconserv): Writing the conservative variables in terms of the primitive variables\n",
+    "1. [Step 2](#stressenergy): **compute_enthalpy()**, **compute_T4UU()**, **compute_T4UD()**: Define the stress-energy tensor $T^{\\mu\\nu}$ and $T^\\mu{}_\\nu$\n",
+    "1. [Step 3](#primtoconserv): **compute_sqrtgammaDET()**, **compute_rho_star()**, **compute_tau_tilde()**, **compute_S_tildeD()**: Writing the conservative variables in terms of the primitive variables\n",
     "1. [Step 4](#grhdfluxes): Define the fluxes for the GRHD equations\n",
-    "    1. [Step 4.a](#rhostarfluxterm): Define $\\rho_*$ flux term for GRHD equations\n",
-    "    1. [Step 4.b](#taustildesourceterms): Define $\\tilde{\\tau}$ and $\\tilde{S}_i$ flux terms for GRHD equations\n",
+    "    1. [Step 4.a](#rhostarfluxterm): **compute_vU_from_u4U__no_speed_limit()**, **compute_rho_star_fluxU()**: Define $\\rho_*$ flux term for GRHD equations\n",
+    "    1. [Step 4.b](#taustildesourceterms): **compute_tau_tilde_fluxU()**, **compute_S_tilde_fluxUD()**: Define $\\tilde{\\tau}$ and $\\tilde{S}_i$ flux terms for GRHD equations\n",
     "1. [Step 5](#grhdsourceterms): Define source terms on RHSs of GRHD equations\n",
-    "    1. [Step 5.a](#ssourceterm): Define $s$ source term on RHS of $\\tilde{\\tau}$ equation\n",
+    "    1. [Step 5.a](#ssourceterm): **compute_s_source_term()**: Define $s$ source term on RHS of $\\tilde{\\tau}$ equation\n",
     "    1. [Step 5.b](#stildeisourceterm): Define source term on RHS of $\\tilde{S}_i$ equation\n",
-    "        1. [Step 5.b.i](#fourmetricderivs): Compute $g_{\\mu\\nu,i}$ in terms of ADM quantities and their derivatives\n",
-    "        1. [Step 5.b.ii](#stildeisource): Compute source term of the $\\tilde{S}_i$ equation: $\\frac{1}{2} \\alpha\\sqrt{\\gamma} T^{\\mu\\nu} g_{\\mu\\nu,i}$\n",
-    "1. [Step 6](#convertvtou): Conversion of $v^i$ to $u^\\mu$ (Courtesy Patrick Nelson)\n",
+    "        1. [Step 5.b.i](#fourmetricderivs): **compute_g4DDdD()**: Compute $g_{\\mu\\nu,i}$ in terms of ADM quantities and their derivatives\n",
+    "        1. [Step 5.b.ii](#stildeisource): **compute_S_tilde_source_termD()**: Compute source term of the $\\tilde{S}_i$ equation: $\\frac{1}{2} \\alpha\\sqrt{\\gamma} T^{\\mu\\nu} g_{\\mu\\nu,i}$\n",
+    "1. [Step 6](#convertvtou): **u4U_in_terms_of_vU_apply_speed_limit()**: Conversion of $v^i$ to $u^\\mu$ (Courtesy Patrick Nelson)\n",
     "1. [Step 7](#declarevarsconstructgrhdeqs): Declare ADM and hydrodynamical input variables, and construct GRHD equations\n",
     "1. [Step 8](#code_validation): Code Validation against `GRHD.equations` NRPy+ module\n",
     "1. [Step 9](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
