Multiple notebooks: Describe NRPy+ tutorial notebooks as notebooks, not modules, to reduce confusion.

--- a/Tutorial-BSSN_formulation.ipynb
+++ b/Tutorial-BSSN_formulation.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "## Author: Zach Etienne\n",
     "\n",
-    "## This tutorial module demonstrates how Einstein's equations of general relativity in this formulation are constructed and output within NRPy+.\n",
+    "## This tutorial notebook demonstrates how Einstein's equations of general relativity in this formulation are constructed and output within NRPy+.\n",
     "\n",
     "\n",
     "### As Einstein's equations in this formalism take the form of highly nonlinear, coupled *wave equations*, the [tutorial module on the scalar wave equation in curvilinear coordinates](Tutorial-ScalarWaveCurvilinear.ipynb) is *required* reading before beginning this module. That module, as well as its own prerequisite [module on reference metrics within NRPy+](Tutorial-Reference_Metric.ipynb) provides the needed overview of how NRPy+ handles reference metrics.\n",
