--- a/Tutorial-RK_Butcher_Table_Dictionary.ipynb
+++ b/Tutorial-RK_Butcher_Table_Dictionary.ipynb
@@ -16,11 +16,11 @@
     "# Explicit Runge Kutta methods and their Butcher tables\n",
     "## Authors: Brandon Clark & Zach Etienne\n",
     "\n",
-    "## This tutorial module stores known explicit Runge Kutta-like methods as Butcher tables in a Python dictionary format. \n",
+    "## This tutorial notebook stores known explicit Runge Kutta-like methods as Butcher tables in a Python dictionary format. \n",
     "\n",
     "**Module Status:** <font color='green'><b> Validated </b></font>\n",
     "\n",
-    "**Validation Notes:** This tutorial module has been confirmed to be **self-consistent with its corresponding NRPy+ module**, as documented [below](#code_validation). In addition, each of these Butcher tables has been verified to yield an RK method to the expected local truncation error in a challenging battery of ODE tests, in the [RK Butcher Table Validation tutorial module](Tutorial-RK_Butcher_Table_Validation.ipynb).\n",
+    "**Validation Notes:** This tutorial notebook has been confirmed to be **self-consistent with its corresponding NRPy+ module**, as documented [below](#code_validation). In addition, each of these Butcher tables has been verified to yield an RK method to the expected local truncation error in a challenging battery of ODE tests, in the [RK Butcher Table Validation tutorial module](Tutorial-RK_Butcher_Table_Validation.ipynb).\n",
     "\n",
     "### NRPy+ Source Code for this module: [MoLtimestepping/RK_Butcher_Table_Dictionary.py](../edit/MoLtimestepping/RK_Butcher_Table_Dictionary.py)\n",
     "\n",
