--- a/Tutorial-BSSN_quantities.ipynb
+++ b/Tutorial-BSSN_quantities.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "**Module Status:** <font color='orange'><b> Self-Validated </b></font>\n",
     "\n",
-    "**Validation Notes:** This tutorial module has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). **Additional validation tests may have been performed, but are as yet, undocumented. (TODO)**\n",
+    "**Validation Notes:** This tutorial notebook has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). **Additional validation tests may have been performed, but are as yet, undocumented. (TODO)**\n",
     "\n",
     "[comment]: <> (Introduction: TODO)\n",
     "\n",
