--- a/Tutorial-GiRaFFEfood_HO_1D_tests.ipynb
+++ b/Tutorial-GiRaFFEfood_HO_1D_tests.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "**Module Status:** <font color='orange'><b> Self-Validated </b></font>\n",
     "\n",
-    "**Validation Notes:** This tutorial module has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). **Additional validation tests may have been performed, but are as yet, undocumented. (TODO)**\n",
+    "**Validation Notes:** This tutorial notebook has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). **Additional validation tests may have been performed, but are as yet, undocumented. (TODO)**\n",
     "\n",
     "### NRPy+ Source Code for this module: [GiRaFFEfood_HO/GiRaFFEfood_HO_1D_tests.py](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO_1D_tests.py)\n",
     "\n",
