--- a/Tutorial-Method_of_Lines-C_Code_Generation.ipynb
+++ b/Tutorial-Method_of_Lines-C_Code_Generation.ipynb
@@ -17,11 +17,11 @@
     "\n",
     "## Authors: Zach Etienne & Brandon Clark\n",
     "\n",
-    "## This tutorial module generates three blocks of C Code in order to perform Method of Lines timestepping. \n",
+    "## This tutorial notebook generates three blocks of C Code in order to perform Method of Lines timestepping. \n",
     "\n",
     "**Module Status:** <font color='green'><b> Validated </b></font>\n",
     "\n",
-    "**Validation Notes:** This tutorial module has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). All Runge-Kutta Butcher tables were validated using truncated Taylor series in [a separate module](Tutorial-RK_Butcher_Table_Validation.ipynb). Finally, C-code implementation of RK4 was validated against a trusted version. C-code implementations of other RK methods seem to work as expected in the context of solving the scalar wave equation in Cartesian coordinates.\n",
+    "**Validation Notes:** This tutorial notebook has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). All Runge-Kutta Butcher tables were validated using truncated Taylor series in [a separate module](Tutorial-RK_Butcher_Table_Validation.ipynb). Finally, C-code implementation of RK4 was validated against a trusted version. C-code implementations of other RK methods seem to work as expected in the context of solving the scalar wave equation in Cartesian coordinates.\n",
     "\n",
     "### NRPy+ Source Code for this module: \n",
     "* [MoLtimestepping/C_Code_Generation.py](../edit/MoLtimestepping/C_Code_Generation.py)\n",
