--- a/Tutorial-Psi4_tetrads.ipynb
+++ b/Tutorial-Psi4_tetrads.ipynb
@@ -66,7 +66,7 @@
     "# Table of Contents\n",
     "$$\\label{toc}$$\n",
     "\n",
-    "This tutorial module is organized as follows\n",
+    "This tutorial notebook is organized as follows\n",
     "\n",
     "1. [Step 1](#initializenrpy): Initialize needed NRPy+ modules\n",
     "1. [Step 2](#quasikinnersley): The quasi-Kinnersley tetrad\n",
