--- a/Tutorial-Start_to_Finish-Curvilinear_BCs-new.ipynb
+++ b/Tutorial-Start_to_Finish-Curvilinear_BCs-new.ipynb
@@ -137,7 +137,7 @@
     "\n",
     "where scalefactor\\[i\\] is the $i$th scale factor in the given coordinate system. This idea can be extended to covariant (lowered-index) vectors and arbitrary tensors, as described in [the BSSN quantities tutorial module](Tutorial-BSSN_quantities.ipynb#rescaling_tensors).\n",
     "\n",
-    "**In summary, Challenge 3 is addressed via a combination of cell-centered grids, tensor rescaling, and a stable Method of Lines time stepping algorithm. This tutorial module will therefore focus on addressing Challenges 1 and 2, which, coincidentally, are addressed via an appropriate boundary condition algorithm.**"
+    "**In summary, Challenge 3 is addressed via a combination of cell-centered grids, tensor rescaling, and a stable Method of Lines time stepping algorithm. This tutorial notebook will therefore focus on addressing Challenges 1 and 2, which, coincidentally, are addressed via an appropriate boundary condition algorithm.**"
    ]
   },
   {
