Multiple notebooks: Continue adjusting language to describe notebooks as notebooks and not modules. Also fix the common double-the typo

--- a/Tutorial-BSSN_quantities.ipynb
+++ b/Tutorial-BSSN_quantities.ipynb
@@ -45,7 +45,7 @@
     "# Table of Contents\n",
     "$$\\label{toc}$$\n",
     "\n",
-    "Each family of quantities is constructed within a given function (**boldfaced** below). This module is organized as follows\n",
+    "Each family of quantities is constructed within a given function (**boldfaced** below). This notebook is organized as follows\n",
     "\n",
     "\n",
     "1. [Step 1](#initializenrpy): Initialize needed Python/NRPy+ modules\n",
