--- a/Tutorial-ETK_thorn-GiRaFFE_Higher_Order_v2.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFE_Higher_Order_v2.ipynb
@@ -50,7 +50,7 @@
     "# Table of Contents\n",
     "$$\\label{toc}$$ \n",
     "\n",
-    "This module is organized as follows\n",
+    "This notebook is organized as follows\n",
     "\n",
     "1. [Step 1](#initializenrpy): Call on NRPy+ to convert the SymPy expression for the evolution equations and A-to-B into one C-code kernel for each\n",
     "    1. [Step 1.a](#import): Import NRPy+ core modules and the `GiRaFFE_Higher_Order_v2` module\n",
