--- a/Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb
+++ b/Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb
@@ -43,7 +43,7 @@
     "# Table of Contents\n",
     "$$\\label{toc}$$ \n",
     "\n",
-    "This module is organized as follows\n",
+    "This notebook is organized as follows\n",
     "\n",
     "1. [Step 1](#initializenrpy): **Call on NRPy+ to generate the TOV solution given a piecewise-polytrope equation of state; output the data to a text file**\n",
     "1. [Step 2](#initial_data): **Converting TOV initial data so that it can be used by the Einstein Toolkit**\n",
