--- a/Tutorial-Finite_Difference_Derivatives.ipynb
+++ b/Tutorial-Finite_Difference_Derivatives.ipynb
@@ -30,7 +30,7 @@
     "# Table of Contents \\[Back to [top](#toc)\\]\n",
     "$$\\label{toc}$$ \n",
     "\n",
-    "This module is organized as follows\n",
+    "This notebook is organized as follows\n",
     "\n",
     "1. [Preliminaries](#fdd): Introduction to Finite Difference Derivatives\n",
     "1. [Step 1](#fdmodule): The finite_difference NRPy+ module\n",
