--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb
@@ -55,7 +55,7 @@
     "# Table of Contents\n",
     "$$\\label{toc}$$\n",
     "\n",
-    "This module is organized as follows\n",
+    "This notebook is organized as follows\n",
     "\n",
     "1. [Step 1](#initializenrpy): Set core NRPy+ parameters for numerical grids and reference metric\n",
     "1. [Step 2](#adm_id_tov): Set up ADM initial data for polytropic TOV Star\n",
