--- a/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
+++ b/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
@@ -37,7 +37,7 @@
     "# Table of Contents\n",
     "$$\\label{toc}$$\n",
     "\n",
-    "This module is organized as follows\n",
+    "This notebook is organized as follows\n",
     "\n",
     "1. [Step 1](#u0bu): Computing $u^0$ and $b^{\\mu}$\n",
     "    1. [Step 1.a](#4metric): Compute the 4-metric $g_{\\mu\\nu}$ and its inverse $g^{\\mu\\nu}$ from the ADM 3+1 variables, using the [`BSSN.ADMBSSN_tofrom_4metric`](../edit/BSSN/ADMBSSN_tofrom_4metric.py) ([**tutorial**](Tutorial-ADMBSSN_tofrom_4metric.ipynb)) NRPy+ module\n",
