--- a/Tutorial-ADMBSSN_tofrom_4metric.ipynb
+++ b/Tutorial-ADMBSSN_tofrom_4metric.ipynb
@@ -29,7 +29,7 @@
     "# Table of Contents\n",
     "$$\\label{toc}$$ \n",
     "\n",
-    "This module is organized as follows\n",
+    "This notebook is organized as follows\n",
     "\n",
     "1. [Step 1](#setup_ADM_quantities): `setup_ADM_quantities(inputvars)`: If `inputvars=\"ADM\"` declare ADM quantities $\\left\\{\\gamma_{ij},\\beta^i,\\alpha\\right\\}$; if `inputvars=\"ADM\"` define ADM quantities in terms of BSSN quantities\n",
     "1. [Step 2](#admbssn_to_fourmetric): Write 4-metric $g_{\\mu\\nu}$ and its inverse $g^{\\mu\\nu}$ in terms of ADM or BSSN quantities\n",
