--- a/Tutorial-ADM_in_terms_of_BSSN.ipynb
+++ b/Tutorial-ADM_in_terms_of_BSSN.ipynb
@@ -48,7 +48,7 @@
     "# Table of Contents\n",
     "$$\\label{toc}$$\n",
     "\n",
-    "This module is organized as follows\n",
+    "This notebook is organized as follows\n",
     "\n",
     "1. [Step 1](#initializenrpy): Initialize core Python/NRPy+ modules\n",
     "1. [Step 2](#threemetric): The ADM three-metric $\\gamma_{ij}$ and its derivatives in terms of rescaled BSSN quantities\n",
