--- a/Tutorial-BSSN_constraints.ipynb
+++ b/Tutorial-BSSN_constraints.ipynb
@@ -41,7 +41,7 @@
     "# Table of Contents\n",
     "$$\\label{toc}$$\n",
     "\n",
-    "This module is organized as follows\n",
+    "This notebook is organized as follows\n",
     "\n",
     "1. [Step 1](#initializenrpy): Initialize needed Python/NRPy+ modules\n",
     "1. [Step 2](#hamiltonianconstraint): Construct the Hamiltonian constraint $\\mathcal{H}$.\n",
