--- a/Tutorial-BSSN_in_terms_of_ADM.ipynb
+++ b/Tutorial-BSSN_in_terms_of_ADM.ipynb
@@ -45,7 +45,7 @@
     "# Table of Contents\n",
     "$$\\label{toc}$$ \n",
     "\n",
-    "This module is organized as follows\n",
+    "This notebook is organized as follows\n",
     "\n",
     "1. [Step 1](#initializenrpy): Initialize core Python/NRPy+ modules; set desired output BSSN Curvilinear coordinate system set to Spherical\n",
     "1. [Step 2](#adm2bssn): Perform the ADM-to-BSSN conversion for 3-metric, extrinsic curvature, and gauge quantities\n",
