--- a/Tutorial-BSSN_stress_energy_source_terms.ipynb
+++ b/Tutorial-BSSN_stress_energy_source_terms.ipynb
@@ -78,7 +78,7 @@
     "# Table of Contents\n",
     "$$\\label{toc}$$\n",
     "\n",
-    "This module is organized as follows\n",
+    "This notebook is organized as follows\n",
     "\n",
     "1. [Step 1](#initializenrpy): Initialize needed Python/NRPy+ modules\n",
     "1. [Step 2](#bssn_sourceterms): BSSN source terms, in terms of $T^{\\mu\\nu}$\n",
