--- a/Tutorial-ETK_thorn-IDMaxwellNRPy.ipynb
+++ b/Tutorial-ETK_thorn-IDMaxwellNRPy.ipynb
@@ -42,7 +42,7 @@
     "# Table of Contents\n",
     "$$\\label{toc}$$\n",
     "\n",
-    "This module is organized as follows\n",
+    "This notebook is organized as follows\n",
     "\n",
     "1. [Step 1](#initializenrpy): Call on NRPy+ to convert the SymPy expression for the Maxwell's equations initial data into a C-code kernel\n",
     "1. [Step 2](#einstein): Interfacing with the Einstein Toolkit\n",
