--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
@@ -43,7 +43,7 @@
     "# Table of Contents: \n",
     "$$\\label{toc}$$\n",
     "\n",
-    "This module is organized as follows\n",
+    "This notebook is organized as follows\n",
     "\n",
     "1. [Step 1](#etkmodule): Setting up the Core C Code for the Einstein Toolkit Module\n",
     "    1. [Step 1.a](#etk_interp): Low-Level ETK Interpolation Function\n",
