--- a/Tutorial-Indexed_Expressions.ipynb
+++ b/Tutorial-Indexed_Expressions.ipynb
@@ -34,7 +34,7 @@
     "# Table of Contents\n",
     "$$\\label{toc}$$\n",
     "\n",
-    "This module is organized as follows\n",
+    "This notebook is organized as follows\n",
     "\n",
     "1. [Step 1](#initializenrpy): Initialize core Python/NRPy+ modules\n",
     "1. [Step 2](#idx1): Rank-1 Indexed Expressions\n",
