--- a/Tutorial-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-ScalarWaveCurvilinear.ipynb
@@ -38,7 +38,7 @@
     "# Table of Contents\n",
     "$$\\label{toc}$$\n",
     "\n",
-    "This module is organized as follows\n",
+    "This notebook is organized as follows\n",
     "\n",
     "0. [Preliminaries](#prelim): Reference Metrics and Picking Best Coordinate System to Solve the PDE\n",
     "1. [Example](#example): The scalar wave equation in spherical coordinates\n",
