--- a/Tutorial-Start_to_Finish-Curvilinear_BCs-new.ipynb
+++ b/Tutorial-Start_to_Finish-Curvilinear_BCs-new.ipynb
@@ -149,7 +149,7 @@
     "# Table of Contents\n",
     "$$\\label{toc}$$\n",
     "\n",
-    "This module is organized as follows\n",
+    "This notebook is organized as follows\n",
     "\n",
     "1. [Step 1](#basic_algorithm): Overview of boundary condition algorithm in curvilinear coordinates\n",
     "    1. [Step 1.a](#challenge1): Addressing Challenge 1: Distinguishing inner from outer boundary points\n",
