--- a/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
+++ b/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
@@ -75,7 +75,7 @@
     "# Table of Contents\n",
     "$$\\label{toc}$$\n",
     "\n",
-    "This module is organized as follows\n",
+    "This notebook is organized as follows\n",
     "\n",
     "1. [Step 1](#initializenrpy): Set core NRPy+ parameters for numerical grids and reference metric\n",
     "1. [Step 2](#ccode_bcs): Implement C code for implementation of curvilinear coordinate boundary conditions\n",
